--- a/frontend/src/components/inputDialog/index.css
+++ b/frontend/src/components/inputDialog/index.css
@@ -12,16 +12,21 @@
 }
 
 .card {
-  /* position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
   z-index: 4;
-  /* background-color: white; */
   backdrop-filter: blur(6px);
   border: 1px solid lightgray;
   border-radius: 5px;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card-lyrics {
+  z-index: 4;
+  backdrop-filter: blur(6px);
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+  width: 50%;
+  height: 50%;
 }
 
 .field-list {
@@ -36,6 +41,21 @@
   margin-top: 5px;
   padding: 10px;
   width: 100%;
+}
+
+.field-input-lyrics-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70%;
+}
+
+.field-input-lyrics {
+  padding: auto;
+  resize: none;
+  width: 90%;
+  height: 100%;
 }
 
 .button-group {
@@ -64,6 +84,8 @@
 
 .title {
   user-select: none;
+  display: flex;
+  justify-content: center;
 }
 
 .handle {
