--- a/frontend-ts/src/components/SiteHeader/index.css
+++ b/frontend-ts/src/components/SiteHeader/index.css
@@ -17,6 +17,10 @@
   margin: 0;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .optionButtons li {
   margin: 30px 30px 0 30px;
   padding: 30px 10px 30px 10px;
