--- a/frontend-ts/src/components/ComposeArea/index.css
+++ b/frontend-ts/src/components/ComposeArea/index.css
@@ -1,6 +1,16 @@
 .compose-area-wrapper {
-  width: 3000px;
-  height: 2000px;
+  position: relative;
+  width: 10000px;
+  height: 2700px;
+}
+
+.compose-area-cols {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
 .compose-area-rows {
