--- a/frontend-ts/src/components/ComposeArea/index.css
+++ b/frontend-ts/src/components/ComposeArea/index.css
@@ -1,5 +1,22 @@
-.compose-area-wrapper {
+.compose-area-outer-wrapper {
   position: relative;
+  width: 10000px;
+  height: 2720px;
+}
+
+.upper-bar {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 10000px;
+  height: 20px;
+  z-index: 3;
+}
+
+.compose-area-wrapper {
+  position: absolute;
+  top: 20px;
+  left: 0;
   width: 10000px;
   height: 2700px;
 }
@@ -11,6 +28,13 @@
   width: 100%;
   height: 100%;
   z-index: 2;
+}
+
+.compose-area-col-numbers {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
 }
 
 .compose-area-rows {
