--- a/frontend-ts/src/components/Toolbar/index.css
+++ b/frontend-ts/src/components/Toolbar/index.css
@@ -1,9 +1,10 @@
 .toolbar-wrapper {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+  margin: 10px 30px;
 }
 
-.button {
+/* .button {
   margin: 10px;
   border: 1px solid black;
   border-radius: 5px;
@@ -22,7 +23,7 @@
   border: 1px solid lightgray;
   color: lightgray;
   cursor: default;
-}
+} */
 
 .audio {
   /* visibility: hidden; */
