--- a/frontend/src/components/CanvasComponent/index.css
+++ b/frontend/src/components/CanvasComponent/index.css
@@ -1,3 +1,12 @@
 .compose-area-canvas {
   background: rgba(255, 255, 255, 0);
 }
+
+.progress-wrapper{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
